--- a/css/style.css
+++ b/css/style.css
@@ -425,8 +425,8 @@ a {
 .image {
   opacity: 1;
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 95%;
+  height: 95%;
   -webkit-transition: .5s ease;
   -o-transition: .5s ease;
   transition: .5s ease;
@@ -635,4 +635,93 @@ a {
 .social-item {
 	height : 5rem;
 	width : 5rem;
+}
+
+.font-medium-size{
+	font-size: 14px;
+}
+
+.font-weight-medium{
+	font-weight:400;
+}
+
+.card-item{
+	margin-top:5rem;
+	background-color:#222000;
+	border-radius:1rem;
+}
+
+.card-hard-tint{
+	background-color: rgba(100,100,100,0.55);
+}
+
+.card-tint{
+	background-color: rgba(100,100,100,0.10);
+}
+
+.card-heading{
+	font-size : 3rem;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 10px;
+  width: 10px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 3.5s;
+  animation-name: fade;
+  animation-duration: 3.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
 }
